[gd_scene load_steps=3 format=3 uid="uid://3fnebg8beehh"]

[ext_resource type="PackedScene" uid="uid://pteh7k3pyx6q" path="res://actors/die_face.tscn" id="1_e2lmd"]
[ext_resource type="Script" uid="uid://dy1dnvjdyedtc" path="res://actors/die.gd" id="1_jhkij"]

[node name="Die" type="Node3D"]
script = ExtResource("1_jhkij")

[node name="DieFace0" parent="." instance=ExtResource("1_e2lmd")]

[node name="DieFace1" parent="." instance=ExtResource("1_e2lmd")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)

[node name="DieFace2" parent="." instance=ExtResource("1_e2lmd")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="DieFace3" parent="." instance=ExtResource("1_e2lmd")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)

[node name="DieFace4" parent="." instance=ExtResource("1_e2lmd")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 0, 0)

[node name="DieFace5" parent="." instance=ExtResource("1_e2lmd")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
